[fixmystreet.com] Improve fixmystreet.org link visibility in footer

--- a/web/cobrands/fixmystreet.com/layout.scss
+++ b/web/cobrands/fixmystreet.com/layout.scss
@@ -370,6 +370,10 @@ footer {
 
 .footer-marketing {
   color: #ccc;
+
+  a {
+      color: white;
+  }
 }
 
 .healthcheck-unit {
